force-app/main/default/objects/Lead/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Australian Business Number</description>
    <label>ABN</label>
    <length>14</length>
    <type>Text</type>
</CustomField>