force-app/main/default/objects/Lead/fields/ABN_Status__c.field-meta.xml
<CustomField>
    <fullName>ABN_Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Formula field to show the ABN validation status with images</description>
    <formula>TEXT(ABN_Validation_Status__c) + &quot; &quot; + 
IMAGE(
CASE(Text(ABN_Validation_Status__c),
&quot;Active&quot;, &quot;/img/msg_icons/confirm24.png&quot;,
&quot;Cancelled&quot;, &quot;/img/msg_icons/error24.png&quot;,
&quot;Validation Error&quot;, &quot;/img/msg_icons/error24.png&quot;,
&quot;Validation in progress&quot;, &quot;/img/msg_icons/info24.png&quot;,
&quot;/s.gif&quot;),
&quot;ABN Validation Status&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABN Status</label>
    <type>Text</type>
</CustomField>