force-app/main/default/objects/Lead/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Customer's Business Account Number</description>
    <label>Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>