force-app/main/default/objects/Lead/fields/ACN__c.field-meta.xml
<CustomField>
    <fullName>ACN__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Australian Company Number (ACN)</description>
    <label>ACN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>