force-app/main/default/objects/Lead/fields/ACN_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>ACN_Validation_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>ABN validation status received from australian business registry</description>
    <label>ACN Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Validation in progress</fullName>
            </value>
            <value>
                <fullName>Validation Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>