force-app/main/default/objects/Lead/fields/AdvertisingIndicator__c.field-meta.xml
<CustomField>
    <fullName>AdvertisingIndicator__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>true</defaultValue>
    <description>This field is used to store the indicator value of advertisment.</description>
    <label>Advertising Indicator</label>
    <type>Checkbox</type>
</CustomField>