force-app/main/default/objects/Lead/fields/Assignee_Group__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Group__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_iKnow</complianceGroup>
    <description>Assignment group
e.g. Private Banking VIC</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Assignee Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>