force-app/main/default/objects/Lead/fields/Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Customer CAPSIS ID (Business), provided by UNICA</description>
    <label>Business ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>