force-app/main/default/objects/Lead/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>External ID to link records from Source Systems.</description>
    <externalId>true</externalId>
    <label>Campaign Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>