force-app/main/default/objects/Lead/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>CC-1038 - Display the correct lead list views with Campaign Name</description>
    <label>Campaign Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>