force-app/main/default/objects/Lead/fields/CAPCIS_ID__c.field-meta.xml
<CustomField>
    <fullName>CAPCIS_ID__c</fullName>
    <complianceGroup>Source_Caps;Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <description>CAP-CIS ID of the Prospect created via Lead Conversion in Salesforce</description>
    <label>CAPCIS ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>