force-app/main/default/objects/Lead/fields/CCRM_Duplicate_Block_Check__c.field-meta.xml
<CustomField>
    <fullName>CCRM_Duplicate_Block_Check__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Yes if Commercial Lead Status is New or In Progress, No for all other status, blank if it is not a Commercial Lead</description>
    <label>CCRM Duplicate Block Check</label>
    <length>5</length>
    <type>Text</type>
</CustomField>