force-app/main/default/objects/Lead/fields/CCRM_DuplicateLeadCheck__c.field-meta.xml
<CustomField>
    <fullName>CCRM_DuplicateLeadCheck__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>To check if record is eligible for duplicate check</description>
    <formula>( TEXT(Lead_Originator__c)  = &quot;CCRM&quot;) &amp;&amp;  
( RecordType.Name = &quot;Commercial CRM Lead&quot; ) &amp;&amp;  
(( TEXT(Status) = &quot;New&quot;) ||
(  TEXT(Status) = &quot;In progress&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplicate Lead Check</label>
    <type>Checkbox</type>
</CustomField>