force-app/main/default/objects/Lead/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Target Stream that will be receiving the referral.</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>International Banking Services</fullName>
            </value>
            <value>
                <fullName>Mobile Lending</fullName>
            </value>
            <value>
                <fullName>Private Bank</fullName>
            </value>
            <value>
                <fullName>Video Conferencing (Mortgages)</fullName>
            </value>
            <value>
                <fullName>Home Loan Hotline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>