force-app/main/default/objects/Lead/fields/Circle_Of_Influence__c.field-meta.xml
<CustomField>
    <fullName>Circle_Of_Influence__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description> Lookup field for Circle of Influence </description>
    <label>Circle Of Influence</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Circle_Of_Influence__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Company_Member</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Circle_Of_Influence__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>