force-app/main/default/objects/Lead/fields/CLG_ID__c.field-meta.xml
<CustomField>
    <fullName>CLG_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Customer lending group number</description>
    <label>CLG ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>