force-app/main/default/objects/Lead/fields/Contactpreferences__c.field-meta.xml
<CustomField>
    <fullName>Contactpreferences__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Picklist for capturing Contact Preference.</description>
    <label>Contact preferences</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9-12 AEST</fullName>
            </value>
            <value>
                <fullName>12-2 (lunch period) AEST</fullName>
            </value>
            <value>
                <fullName>2-5 AEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>