force-app/main/default/objects/Lead/fields/Controlling_Post__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Post__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Controlling Post of Lead</description>
    <label>Controlling Post</label>
    <referenceTo>Controlling_Post__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>