force-app/main/default/objects/Lead/fields/CPID__c.field-meta.xml
<CustomField>
    <fullName>CPID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Control Post name where the Leads assigned to a dedicated banker. Required for queue assisgnment if this field carries CPID</description>
    <label>CPID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>