force-app/main/default/objects/Lead/fields/CPID_Owner__c.field-meta.xml
<CustomField>
    <fullName>CPID_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>User with the CPID for the Lead</description>
    <label>CPID Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>