force-app/main/default/objects/Lead/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Customer CAPSIS ID (Individual)</description>
    <label>Customer ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>