force-app/main/default/objects/Lead/fields/Customer_Pre_Exist__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pre_Exist__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Will be marked as true if customer is already present for the lead</description>
    <label>Customer Pre-Exist</label>
    <type>Checkbox</type>
</CustomField>