force-app/main/default/objects/Lead/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Personal_Information;Source - OCV</complianceGroup>
    <description>Related Customer Status</description>
    <formula>TEXT(FinServ__RelatedAccount__r.FinServ__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Status</label>
    <type>Text</type>
</CustomField>