force-app/main/default/objects/Lead/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>To keep track on when the lead was received</description>
    <formula>CreatedDate</formula>
    <label>Date Received</label>
    <type>DateTime</type>
</CustomField>