force-app/main/default/objects/Lead/fields/Date_Recevied__c.field-meta.xml
<CustomField>
    <fullName>Date_Recevied__c</fullName>
    <formula>CreatedDate</formula>
    <label>Date Recevied</label>
    <type>DateTime</type>
</CustomField>