force-app/main/default/objects/Lead/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Display Entity Type</description>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Card Billing Group</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>01</fullName>
                <label>Sole Trader</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Partnership</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Corporation</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Trust</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Non Profit Organisation</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Federal Public Enterprise</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>State Public Enterprise</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Local Public Enterprise</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Superannuation</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Federal Government</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>State Government</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Local Government</label>
            </value>
            <value>
                <fullName>Customer Lending Group</fullName>
                <isActive>true</isActive>
                <label>Customer Lending Group</label>
            </value>
            <value>
                <fullName>Local Government_old</fullName>
                <isActive>false</isActive>
                <label>Local Government_old</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>