force-app/main/default/objects/Lead/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_iKnow</complianceGroup>
    <description>Error Message</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>