force-app/main/default/objects/Lead/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <defaultValue>IF(
    NOT(
        CONTAINS( 
            $User.Username,&apos;unica.integration@anzx.com&apos;
        )
    ),
    CASE( 
        $RecordType.Name ,&apos;Commercial CRM Lead&apos;, 
            IF((WEEKDAY(DATEVALUE(NOW() + VALUE($Label.CCRM_ExpiryDateDays))) = 1)
                , NOW() + (VALUE($Label.CCRM_ExpiryDateDays) + 1),
                IF((WEEKDAY(DATEVALUE(NOW() + VALUE($Label.CCRM_ExpiryDateDays))) = 7)
                    , NOW() + VALUE($Label.CCRM_ExpiryDateDays) + 2
                    , NOW() + (VALUE($Label.CCRM_ExpiryDateDays))
                )
            ),
            &apos;Referral&apos;,
            IF((WEEKDAY(DATEVALUE(NOW() + VALUE($Label.Referral_ExpiryDateDays))) = 1)
                , NOW() + (VALUE($Label.Referral_ExpiryDateDays) + 1),
                IF((WEEKDAY(DATEVALUE(NOW() + VALUE($Label.Referral_ExpiryDateDays))) = 7)
                    , NOW() + VALUE($Label.Referral_ExpiryDateDays) + 2
                    , NOW() + (VALUE($Label.Referral_ExpiryDateDays))
                )
            ),
            NULL

    )
    ,NULL
)</defaultValue>
    <description>Expiry date of the lead.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>