force-app/main/default/objects/Lead/fields/Expiry_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Indicator__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Traffic Light Indicator for Lead Expiry</description>
    <formula>IF(
    OR(ISPICKVAL(Status,&quot;Referred&quot;),  ISPICKVAL(Status, &quot;No Opportunity&quot;) , ISPICKVAL(Status, &quot;Converted&quot;),
	   ISPICKVAL(Status, &quot;Outcome&quot;)),
    &apos;&apos;, 
    IMAGE( 
        IF(  Expiry_Date__c  &gt;=  TODAY(), 
        CASE(
        WEEKDAY(TODAY()), 
        1, IF(  Expiry_Date__c =  TODAY(), &quot;/img/msg_icons/warning16.png&quot;,
        &quot;/img/samples/flag_green.gif&quot;),
        7, IF(  Expiry_Date__c =  TODAY(), &quot;/img/msg_icons/warning16.png&quot;,
        &quot;/img/samples/flag_green.gif&quot;),
        6, IF(  Expiry_Date__c &lt;=  TODAY() + 3, &quot;/img/msg_icons/warning16.png&quot;,
        &quot;/img/samples/flag_green.gif&quot;),
        IF(  Expiry_Date__c &lt;=  TODAY() + 1, &quot;/img/msg_icons/warning16.png&quot;,
        &quot;/img/samples/flag_green.gif&quot;)),
        CASE(
        WEEKDAY(TODAY()),
        1, IF(  Expiry_Date__c + 2 &lt;=  TODAY(), &quot;/img/msg_icons/warning16.png&quot;,
        &quot;/img/msg_icons/error16.png&quot;),
        7, IF(  Expiry_Date__c + 2 &lt;=  TODAY(), &quot;/img/msg_icons/warning16.png&quot;,
        &quot;/img/msg_icons/error16.png&quot;),
        &quot;/img/msg_icons/error16.png&quot;))
        ,&quot;Expiry Indicator&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiry Indicator</label>
    <type>Text</type>
</CustomField>