force-app/main/default/objects/Lead/fields/External_Referral_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Referral_Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non-Sensitive Personal Information;Source - IKnow</complianceGroup>
    <description>iKnow Referral Status</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>External Referral Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>