force-app/main/default/objects/Lead/fields/FinServ__CreatedFromLead__c.field-meta.xml
<CustomField>
    <fullName>FinServ__CreatedFromLead__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>true</defaultValue>
    <label>Created from Lead</label>
    <type>Checkbox</type>
</CustomField>