force-app/main/default/objects/Lead/fields/FinServ__ExpressedInterest__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ExpressedInterest__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <label>Expressed Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinServ__ProductList</valueSetName>
    </valueSet>
</CustomField>