force-app/main/default/objects/Lead/fields/FinServ__ReferredByContact__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ReferredByContact__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Referrer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Referrals</relationshipLabel>
    <relationshipName>Referral</relationshipName>
    <type>Lookup</type>
</CustomField>